--- a/src/components/WeeklyPlanner/WeeklyPlanner.module.scss
+++ b/src/components/WeeklyPlanner/WeeklyPlanner.module.scss
@@ -225,7 +225,7 @@
 }
 
 .weekRow {
-  margin-bottom: 32px;
+  margin-bottom: 0;
 
   &:last-child {
     margin-bottom: 0;
@@ -463,6 +463,6 @@
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     gap: 16px;
-    margin-bottom: 16px;
+    margin-bottom: 0;
   }
 }
